# OASIS-VIRTUAL-COLLECTION

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
app/: config.py  logging_filters.py  main.py  proxy.py
app/routers/: collections.py  edr_queries.py  landing.py
config/: virtual_collections.json
tests/: test_items.py
